--- a/public/how-we-can-help/pharmaceutical.html
+++ b/public/how-we-can-help/pharmaceutical.html
@@ -5,12 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Our project just needs Font Awesome solid + brand -->
-    <script defer src="fontawesome-free/js/brands.js"></script>
-    <script defer src="fontawesome-free/js/solid.js"></script>
-    <script defer src="fontawesome-free/js/fontawesome.js"></script>
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/my-slider.css" />
-    <script src="src/js/ism-2.2.min.js"></script>
+    <script defer src="../fontawesome-free/js/brands.js"></script>
+    <script defer src="../fontawesome-free/js/solid.js"></script>
+    <script defer src="../fontawesome-free/js/fontawesome.js"></script>
+    <link rel="stylesheet" href="../css/style.css" />
     <title>Clinigen clone</title>
   </head>
 
@@ -31,19 +29,19 @@
               <ul>
                 <li>
                   <a href="http://"
-                    ><img class="flag" src="images/flagUK.jpg" />Clinigen
+                    ><img class="flag" src="../images/flagUK.jpg" />Clinigen
                     Autralia</a
                   >
                 </li>
                 <li>
                   <a href="http://"
-                    ><img class="flag" src="images/flagFR.png" />Clinigen
+                    ><img class="flag" src="../images/flagFR.png" />Clinigen
                     France</a
                   >
                 </li>
                 <li>
                   <a href="http://"
-                    ><img class="flag" src="images/flagDE.png" />Clinigen
+                    ><img class="flag" src="../images/flagDE.png" />Clinigen
                     Germany</a
                   >
                 </li>
@@ -264,9 +262,9 @@
         </div>
 
         <div id="header_bot">
-          <a href="index.html">
+          <a href="../index.html">
             <img
-              src="images/clinigen-logo.png"
+              src="../images/clinigen-logo.png"
               alt="logo"
               class="header_bot_logoClinigen"
             />
@@ -275,7 +273,7 @@
             <nav>
               <ul>
                 <li>
-                  <a href="mission.html">Mission</a>
+                  <a href="../mission.html">Mission</a>
                 </li>
                 <li>
                   <a href="javascript:" class="menuHowCanWeHelp stayActif"
@@ -314,7 +312,7 @@
           </li>
           <li><a href="healtcare.html">Healthcare Professionals</a></li>
           <li><a href="patient_group.html">Patient Groups</a></li>
-          <li><a href="http://">Patients</a></li>
+          <li><a href="patient.html">Patients</a></li>
         </ul>
       </div>
       <!-------------------------- SOUS MENU PRODUCTS & SERVICES ---------------------------->
@@ -322,9 +320,15 @@
         <div class="menuCache_ProductsServices_L">
           <div class="menuCache_ProductsServices_Card">
             <ul>
-              <li class="mainLi"><a href="http://">Products</a></li>
-              <li class="secondLi"><a href="http://">Partnering</a></li>
-              <li class="secondLi"><a href="http://">Divestment</a></li>
+              <li class="mainLi">
+                <a href="../products-services/products.html">Products</a>
+              </li>
+              <li class="secondLi">
+                <a href="../products-services/partnering.html">Partnering</a>
+              </li>
+              <li class="secondLi">
+                <a href="../products-services/divestment.html">Divestment</a>
+              </li>
               <li class="secondLi"><a href="http://">Unlicensed Markets</a></li>
               <li class="secondLi"><a href="http://">Our Products</a></li>
             </ul>
@@ -365,7 +369,7 @@
       </div>
       <!-------------------------- HAMBURGER ---------------------------->
       <div class="headerHamburger">
-        <a href="index.html"> <div class="logoClinigenHamburger"></div></a>
+        <a href="../index.html"> <div class="logoClinigenHamburger"></div></a>
         <div class="menuHamburger">
           <div class="hamburger"><span></span><span></span><span></span></div>
           Menu
@@ -378,7 +382,7 @@
         </div>
         <div class="sousMenuHamburgerCache_menu1">
           <ul>
-            <li><a href="mission.html">Mission</a></li>
+            <li><a href="../mission.html">Mission</a></li>
             <li>
               <a href="javascript:" class="toggleNav1">How we can help </a
               ><i class="fas fa-angle-right"></i>
@@ -396,7 +400,7 @@
                   </li>
                   <li><a href="healtcare.html">Healtcare Professionals</a></li>
                   <li><a href="patient_group.html">Patient Groups</a></li>
-                  <li><a href="">Patients</a></li>
+                  <li><a href="patient.html">Patients</a></li>
                 </ul>
               </div>
             </li>
@@ -478,8 +482,12 @@
 
           <span class="title">PRODUCTS</span>
           <ul>
-            <li><a href="">Partnering</a></li>
-            <li><a href="">Divestment</a></li>
+            <li>
+              <a href="../products-services/partnering.html">Partnering</a>
+            </li>
+            <li>
+              <a href="../products-services/divestment.html">Divestment</a>
+            </li>
             <li><a href="">Unlicensed Markets</a></li>
             <li><a href="">Our Products</a></li>
           </ul>
@@ -669,10 +677,10 @@
         </div>
       </div>
     </footer>
-    <script src="src/js/header.js"></script>
-    <script src="src/js/pharma.js"></script>
-    <script src="src/js/hamburger.js"></script>
-    <script src="src/js/input.js"></script>
+    <script src="../src/js/header.js"></script>
+    <script src="../src/js/pharma.js"></script>
+    <script src="../src/js/hamburger.js"></script>
+    <script src="../src/js/input.js"></script>
     <!-- The core Firebase JS SDK is always required and must be listed first 
 <script src="/__/firebase/8.6.1/firebase-app.js"></script>
 
