--- a/public/mission.html
+++ b/public/mission.html
@@ -310,11 +310,19 @@
       <div class="menuCache_howCanWeHelp">
         <ul>
           <li>
-            <a href="pharmaceutical.html">Pharmaceutical & Biotech Companies</a>
+            <a href="./how-we-can-help/pharmaceutical.html"
+              >Pharmaceutical & Biotech Companies</a
+            >
           </li>
-          <li><a href="healtcare.html">Healthcare Professionals</a></li>
-          <li><a href="patient_group.html">Patient Groups</a></li>
-          <li><a href="http://">Patients</a></li>
+          <li>
+            <a href="./how-we-can-help/healtcare.html"
+              >Healthcare Professionals</a
+            >
+          </li>
+          <li>
+            <a href="./how-we-can-help/patient_group.html">Patient Groups</a>
+          </li>
+          <li><a href="./how-we-can-help/patient.html">Patients</a></li>
         </ul>
       </div>
       <!-------------------------- SOUS MENU PRODUCTS & SERVICES ---------------------------->
@@ -322,9 +330,15 @@
         <div class="menuCache_ProductsServices_L">
           <div class="menuCache_ProductsServices_Card">
             <ul>
-              <li class="mainLi"><a href="http://">Products</a></li>
-              <li class="secondLi"><a href="http://">Partnering</a></li>
-              <li class="secondLi"><a href="http://">Divestment</a></li>
+              <li class="mainLi">
+                <a href="./products-services/products.html">Products</a>
+              </li>
+              <li class="secondLi">
+                <a href="./products-services/partnering.html">Partnering</a>
+              </li>
+              <li class="secondLi">
+                <a href="./products-services/divestment.html">Divestment</a>
+              </li>
               <li class="secondLi"><a href="http://">Unlicensed Markets</a></li>
               <li class="secondLi"><a href="http://">Our Products</a></li>
             </ul>
@@ -390,13 +404,21 @@
                     ><a href="javascript:" class="menuBack">How we can help</a>
                   </li>
                   <li>
-                    <a href="pharmaceutical.html"
+                    <a href="./how-we-can-help/pharmaceutical.html"
                       >Pharmaceutical & Biotech Companies</a
                     >
                   </li>
-                  <li><a href="healtcare.html">Healtcare Professionals</a></li>
-                  <li><a href="patient_group.html">Patient Groups</a></li>
-                  <li><a href="">Patients</a></li>
+                  <li>
+                    <a href="./how-we-can-help/healtcare.html"
+                      >Healtcare Professionals</a
+                    >
+                  </li>
+                  <li>
+                    <a href="./how-we-can-help/patient_group.html"
+                      >Patient Groups</a
+                    >
+                  </li>
+                  <li><a href="./how-we-can-help/patient.html">Patients</a></li>
                 </ul>
               </div>
             </li>
@@ -486,7 +508,7 @@
               Ethical unlicensed access helps protect patients from the growing
               threat of counterfeit medicines distributed online.
             </p>
-            <a href="http://"
+            <a href="./how-we-can-help/pharmaceutical.html"
               >How we can help pharmaceutical and biotech companies</a
             >
             <a href="http://">How we can help healthcare professionals</a>
@@ -590,10 +612,22 @@
           <h3>RELATED LINKS</h3>
           <div>
             <ul>
-              <li><a href="http://">Pharmaceuticals & Biotech companies</a></li>
-              <li><a href="http://">Healthcare Professionals</a></li>
-              <li><a href="http://">Patient Groups</a></li>
-              <li><a href="http://">Patients</a></li>
+              <li>
+                <a href="./how-we-can-help/pharmaceutical.html"
+                  >Pharmaceuticals & Biotech companies</a
+                >
+              </li>
+              <li>
+                <a href="./how-we-can-help/healtcare.html"
+                  >Healthcare Professionals</a
+                >
+              </li>
+              <li>
+                <a href="./how-we-can-help/patient_group.html"
+                  >Patient Groups</a
+                >
+              </li>
+              <li><a href="./how-we-can-help/patient.html">Patients</a></li>
             </ul>
           </div>
         </div>
