--- a/public/products-services/divestment.html
+++ b/public/products-services/divestment.html
@@ -5,13 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Our project just needs Font Awesome solid + brand -->
-    <script defer src="fontawesome-free/js/brands.js"></script>
-    <script defer src="fontawesome-free/js/solid.js"></script>
-    <script defer src="fontawesome-free/js/fontawesome.js"></script>
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/my-slider.css" />
-    <script src="src/js/ism-2.2.min.js"></script>
-    <title>Clinigen clone</title>
+    <script defer src="../fontawesome-free/js/brands.js"></script>
+    <script defer src="../fontawesome-free/js/solid.js"></script>
+    <script defer src="../fontawesome-free/js/fontawesome.js"></script>
+    <link rel="stylesheet" href="../css/style.css" />
+    <script src="../src/js/ism-2.2.min.js"></script>
+    <title>Commercialising existing medicines | Clinigen</title>
   </head>
 
   <body>
@@ -31,19 +30,19 @@
               <ul>
                 <li>
                   <a href="http://"
-                    ><img class="flag" src="images/flagUK.jpg" />Clinigen
+                    ><img class="flag" src="../images/flagUK.jpg" />Clinigen
                     Autralia</a
                   >
                 </li>
                 <li>
                   <a href="http://"
-                    ><img class="flag" src="images/flagFR.png" />Clinigen
+                    ><img class="flag" src="../images/flagFR.png" />Clinigen
                     France</a
                   >
                 </li>
                 <li>
                   <a href="http://"
-                    ><img class="flag" src="images/flagDE.png" />Clinigen
+                    ><img class="flag" src="../images/flagDE.png" />Clinigen
                     Germany</a
                   >
                 </li>
@@ -264,9 +263,9 @@
         </div>
 
         <div id="header_bot">
-          <a href="index.html">
+          <a href="../index.html">
             <img
-              src="images/clinigen-logo.png"
+              src="../images/clinigen-logo.png"
               alt="logo"
               class="header_bot_logoClinigen"
             />
@@ -275,15 +274,15 @@
             <nav>
               <ul>
                 <li>
-                  <a href="mission.html">Mission</a>
+                  <a href="../mission.html">Mission</a>
                 </li>
                 <li>
-                  <a href="javascript:" class="menuHowCanWeHelp stayActif"
+                  <a href="javascript:" class="menuHowCanWeHelp"
                     >How we can help<i class="fas fa-angle-down"></i
                   ></a>
                 </li>
                 <li>
-                  <a href="javascript:" class="menuProductsServices"
+                  <a href="javascript:" class="menuProductsServices stayActif"
                     >Product & Services<i class="fas fa-angle-down"></i
                   ></a>
                 </li>
@@ -310,11 +309,19 @@
       <div class="menuCache_howCanWeHelp">
         <ul>
           <li>
-            <a href="pharmaceutical.html">Pharmaceutical & Biotech Companies</a>
+            <a href="../how-we-can-help/pharmaceutical.html"
+              >Pharmaceutical & Biotech Companies</a
+            >
           </li>
-          <li><a href="healtcare.html">Healthcare Professionals</a></li>
-          <li><a href="patient_group.html">Patient Groups</a></li>
-          <li><a href="http://">Patients</a></li>
+          <li>
+            <a href="../how-we-can-help/healtcare.html"
+              >Healthcare Professionals</a
+            >
+          </li>
+          <li>
+            <a href="../how-we-can-help/patient_group.html">Patient Groups</a>
+          </li>
+          <li><a href="../how-we-can-help/patient.html">Patients</a></li>
         </ul>
       </div>
       <!-------------------------- SOUS MENU PRODUCTS & SERVICES ---------------------------->
@@ -322,9 +329,15 @@
         <div class="menuCache_ProductsServices_L">
           <div class="menuCache_ProductsServices_Card">
             <ul>
-              <li class="mainLi"><a href="http://">Products</a></li>
-              <li class="secondLi"><a href="http://">Partnering</a></li>
-              <li class="secondLi"><a href="http://">Divestment</a></li>
+              <li class="mainLi">
+                <a href="../products-services/products.html">Products</a>
+              </li>
+              <li class="secondLi">
+                <a href="../products-services/partnering.html">Partnering</a>
+              </li>
+              <li class="secondLi">
+                <a href="../products-services/divestment.html">Divestment</a>
+              </li>
               <li class="secondLi"><a href="http://">Unlicensed Markets</a></li>
               <li class="secondLi"><a href="http://">Our Products</a></li>
             </ul>
@@ -365,7 +378,7 @@
       </div>
       <!-------------------------- HAMBURGER ---------------------------->
       <div class="headerHamburger">
-        <a href="index.html"> <div class="logoClinigenHamburger"></div></a>
+        <a href="../index.html"> <div class="logoClinigenHamburger"></div></a>
         <div class="menuHamburger">
           <div class="hamburger"><span></span><span></span><span></span></div>
           Menu
@@ -378,7 +391,7 @@
         </div>
         <div class="sousMenuHamburgerCache_menu1">
           <ul>
-            <li><a href="mission.html">Mission</a></li>
+            <li><a href="../mission.html">Mission</a></li>
             <li>
               <a href="javascript:" class="toggleNav1">How we can help </a
               ><i class="fas fa-angle-right"></i>
@@ -390,13 +403,23 @@
                     ><a href="javascript:" class="menuBack">How we can help</a>
                   </li>
                   <li>
-                    <a href="pharmaceutical.html"
+                    <a href="../how-we-can-help/pharmaceutical.html"
                       >Pharmaceutical & Biotech Companies</a
                     >
                   </li>
-                  <li><a href="healtcare.html">Healtcare Professionals</a></li>
-                  <li><a href="patient_group.html">Patient Groups</a></li>
-                  <li><a href="">Patients</a></li>
+                  <li>
+                    <a href="../how-we-can-help/healtcare.html"
+                      >Healtcare Professionals</a
+                    >
+                  </li>
+                  <li>
+                    <a href="../how-we-can-help/patient_group.html"
+                      >Patient Groups</a
+                    >
+                  </li>
+                  <li>
+                    <a href="../how-we-can-help/patient.html">Patients</a>
+                  </li>
                 </ul>
               </div>
             </li>
@@ -430,200 +453,51 @@
     </header>
     <!-------------------------- CONTENU ---------------------------->
     <main>
-      <div class="mainHeaderHealtcare">
-        <div class="mainHeaderHealtcare_contain">
-          <span>HOW WE CAN HELP</span>
-          <h3>HEALTHCARE PROFESSIONALS</h3>
-          <input type="button" value="Watch video" />
+      <div class="mainHeaderProducts">
+        <div class="mainHeaderProducts_contain">
+          <span>PRODUCTS</span>
+          <h3>DIVESTMENT</h3>
         </div>
       </div>
-      <!----------------------------------------------- MENU FIXED ----------------------------------->
-      <div class="menuFixedHealt">
-        <ul>
-          <li><a href="javascript:">How we can help</a></li>
-          <li><a href="javascript:">Physicians</a></li>
-          <li><a href="javascript:">Pharmacists</a></li>
-          <li><a href="javascript:">Key facts</a></li>
-          <li>
-            <a href="javascript:"
-              >Unlicensed or unvalailable medicine? We get it.</a
-            >
-          </li>
-        </ul>
-      </div>
       <!------------------------------------------------------------------ CONTENU ------------------------------------------------------------------>
-      <div class="containerHealt">
+      <div class="containerProducts">
         <div class="contain_L">
           <div class="contain_L_1">
-            <h3>HOW WE CAN HELP</h3>
             <h4>
-              There are billions of patients with unmet medical needs around the
-              world.
+              Often a pharmaceutical or biotech company re-allocates resource so
+              that they can concentrate on other medicines in their portfolio.
+              They also have a commitment to provide patients with the medicines
+              they need.
             </h4>
             <p>
-              The right medicine might not be available locally for many
-              reasons, including medicines:
-            </p>
-            <ul>
-              <li>In a clinical trial</li>
-              <li>Not commercially available, globally or in your country</li>
-              <li>Unavalaible due to medicine shortages</li>
-              <li>Withdraw from the market</li>
-            </ul>
-            <p>
-              The use of unlicensed medicines plays an essential role in
-              ensuring the best possible patient outcomes. Clinigen provides
-              healthcare professionals around the globe with ethical, compliant
-              and timely access to treatments that are unlicensed or unavailable
-              at the point of care.
-            </p>
-            <div class="videoFrame"></div>
-          </div>
-          <div class="contain_L_2">
-            <h3>PHYSICIANS</h3>
-            <p>
-              Patients rely on their physician to ensure they are offered the
-              best, most effective treatment. For good clinical reasons, the use
-              of unlicensed medicines is essential and access to medicines
-              throughout the product lifecycle ensures physicians have the
-              broadest range of treatment options available.
-            </p>
-
-            <h3>PHARMACISTS</h3>
-            <p>
-              Once prescribed, the hospital pharmacist is relied upon to connect
-              the patient with the medicine they need quickly, safely and
-              compliantly. But the procedures and processes involved in
-              accessing unlicensed medicines are complex and demanding; speed
-              and reliability of medicines supply, supply chain security,
-              patient safety and regulatory hurdles are just some of the
-              challenges to medicine access.
+              That’s where Clinigen comes in, acquiring medicines to make sure
+              that patients in need continue to get access. Maintaining pharma
+              companies’ standards, safeguarding their reputation, and enabling
+              them to focus on their key priorities.
             </p>
             <p>
-              For access to unlicensed medicines,
-              <a href="#">Get in Touch</a>
+              Clinigen utilise their footprint and global expertise built on 30
+              years of invaluable local insights to maintain and grow supply
+              through a range of different commercial and unlicensed channels.
+            </p>
+            <p>
+              That’s why Clinigen clients can be confident they get the result
+              that’s right for them and for their customers, and ultimately for
+              their patients.
             </p>
           </div>
-          <div class="contain_L_3">
-            <h3>KEY FACTS</h3>
-            <div class="listeNumber">
-              <div class="listeNumber_card">
-                <img src="./images/pizza.JPG" alt="" /><span>23,000</span>
-                <p>extensive portfolio of medicines</p>
-              </div>
-              <div class="listeNumber_card">
-                <img src="./images/earth.JPG" alt="" /><span>130</span>
-                <p>ocal knowledge in 130 countries across the world</p>
-              </div>
-              <div class="listeNumber_card">
-                <img src="./images/human.JPG" alt="" /><span>650</span>
-                <p>global team of experts across 13 locations</p>
-              </div>
-              <div class="listeNumber_card">
-                <img src="./images/target.JPG" alt="" /><span>24/7</span>
-                <p>
-                  access to medicines and information through Cliniport, our
-                  convenient online portal
-                </p>
-              </div>
-            </div>
-            <p>
-              Clinigen are the global leaders in supplying access to unlicensed
-              or unavailable medicines to meet unmet patient needs. Healthcare
-              professionals need to work with a trusted partner who can provide
-              ethical, compliant and timely access to unlicensed or unavailable
-              medicines. Clinigen’s global experience, expertise and
-              infrastructure enables us to provide treating physicians with
-              access to medicines at all stages of the product lifecycle and
-              provide pharmacists with the solutions they need to meet unmet
-              patient needs around the world.
-            </p>
-          </div>
-          <div class="contain_L_4">
-            <h3>UNLICENSED OR UNAVAILABLE MEDICINE? WE GET IT.</h3>
-            <p>
-              Whether a medicine is unlicensed, unavailable or experiencing a
-              medicine shortage, healthcare professionals need a trusted partner
-              they can rely on when their patients are relying on them. We get
-              medicine. You get:
-            </p>
-            <!--------------------------------------- TIROIR 1 ------------------------------------------------>
-            <div class="tiroir1">
-              <div class="clickTiroir1">
-                <h4>Experience and expertise</h4>
-                <span class="iconeTiroir1"></span>
-                <span class="iconeTiroir2"></span>
-              </div>
-              <p>
-                Through Clinigen’s infrastructure and global sourcing capability
-                we rapidly and compliantly supply unlicensed medicines around
-                the world. We use our local market knowledge and global
-                regulatory expertise to navigate country-specific regulations,
-                ensuring compliant access to unlicensed medicines for
-                pharmacists and physicians
-              </p>
-            </div>
-            <!--------------------------------------- TIROIR 2 ------------------------------------------------>
-            <div class="tiroir2">
-              <div class="clickTiroir2">
-                <h4>Highest quality medicine supply</h4>
-                <span class="iconeTiroir1"></span>
-                <span class="iconeTiroir2"></span>
-              </div>
-              <p>
-                Clinigen’s established relationships within the pharmaceutical
-                and biotech industry mean that we have access to an extensive
-                portfolio of medicines, sourced either direct from the
-                manufacturer or through our validated supply chain to provide
-                the highest quality medicines.
-              </p>
-            </div>
-            <!--------------------------------------- TIROIR 3 ------------------------------------------------>
-            <div class="tiroir3">
-              <div class="clickTiroir3">
-                <h4>Operational excellence</h4>
-                <span class="iconeTiroir1"></span>
-                <span class="iconeTiroir2"></span>
-              </div>
-              <p>
-                Trusted by both healthcare providers and pharmaceutical &
-                biotech companies to enable access to medicines, our dedicated,
-                in-house, global team of 500 experts manage your request
-                seamlessly, from initial enquiry through to timely and efficient
-                delivery of medicine. Always working within the appropriate
-                legal, regulatory and ethical frameworks, our global team ensure
-                you get the right medicine for your patient in the shortest
-                possible time. Our expertise extends across the entire lifecycle
-                of a medicine, including pre- and post-commercial stages. With
-                our unique ability to provide access to medicines, we can also
-                source and supply medicines for use in clinical trials and
-                provide access to our own portfolio of Clinigen owned, specialty
-                pharmaceutical medicines.
-              </p>
-            </div>
-          </div>
-          <div class="relatedLinksHealt">
+          <div class="relatedLinksProducts">
             <h4>RELATED LINKS</h4>
             <ul>
-              <li><a href="#">About Clinigen</a></li>
-              <li><a href="#">Mission</a></li>
-              <li><a href="#/">Operational excellence</a></li>
+              <li>
+                <a href="../products-services/partnering.html">Partnering</a>
+              </li>
+              <li><a href="#">Unlicensed Markets</a></li>
+              <li><a href="#">Our Products</a></li>
             </ul>
           </div>
         </div>
         <div class="contain_R">
-          <div class="containtPurpleBack">
-            <div class="containPurple">
-              <h5>Online services for healtcare professionals</h5>
-              <ul>
-                <li><a href="#">Hard to find medicine (Clinigen Direct)</a></li>
-                <li><a href="#">Managed Access Programs (Cliniport)</a></li>
-                <li><a href="#">Clinigen Products</a></li>
-                <li><a href="#">Special Obtains</a></li>
-                <li><a href="#">Aseptics UK</a></li>
-              </ul>
-            </div>
-          </div>
           <!--------------------------------------- FORMULAIRE ------------------------------------------------>
           <div class="formulaire">
             <div class="formulaire_titre">
@@ -823,12 +697,10 @@
         </div>
       </div>
     </footer>
-    <script src="src/js/header.js"></script>
-    <script src="src/js/hamburger.js"></script>
-    <script src="src/js/input.js"></script>
-    <script src="src/js/tiroir.js"></script>
-    <script src="src/js/healtcare.js"></script>
-    <script src="src/js/healtcare_combo.js"></script>
+    <script src="../src/js/header.js"></script>
+    <script src="../src/js/hamburger.js"></script>
+    <script src="../src/js/input.js"></script>
+    <script src="../src/js/healtcare_combo.js"></script>
     <!-- The core Firebase JS SDK is always required and must be listed first 
 <script src="/__/firebase/8.6.1/firebase-app.js"></script>
 
