--- a/public/products-services/markets.html
+++ b/public/products-services/markets.html
@@ -330,17 +330,15 @@
           <div class="menuCache_ProductsServices_Card">
             <ul>
               <li class="mainLi">
-                <a href="products.html">Products</a>
+                <a href="../products-services/products.html">Products</a>
               </li>
               <li class="secondLi">
-                <a href="partnering.html">Partnering</a>
+                <a href="../products-services/partnering.html">Partnering</a>
               </li>
               <li class="secondLi">
-                <a href="divestment.html">Divestment</a>
+                <a href="../products-services/divestment.html">Divestment</a>
               </li>
-              <li class="secondLi">
-                <a href="markets.html">Unlicensed Markets</a>
-              </li>
+              <li class="secondLi"><a href="http://">Unlicensed Markets</a></li>
               <li class="secondLi"><a href="http://">Our Products</a></li>
             </ul>
           </div>
@@ -458,7 +456,7 @@
       <div class="mainHeaderProducts">
         <div class="mainHeaderProducts_contain">
           <span>PRODUCTS</span>
-          <h3>DIVESTMENT</h3>
+          <h3>UNLICENSED MARKETS</h3>
         </div>
       </div>
       <!------------------------------------------------------------------ CONTENU ------------------------------------------------------------------>
@@ -466,26 +464,45 @@
         <div class="contain_L">
           <div class="contain_L_1">
             <h4>
-              Often a pharmaceutical or biotech company re-allocates resource so
-              that they can concentrate on other medicines in their portfolio.
-              They also have a commitment to provide patients with the medicines
-              they need.
+              There are times in a medicine’s lifecycle when a pharmaceutical or
+              biotech company must consider making it available as an unlicensed
+              medicine outside the usual commercial channels.
             </h4>
             <p>
-              That’s where Clinigen comes in, acquiring medicines to make sure
-              that patients in need continue to get access. Maintaining pharma
-              companies’ standards, safeguarding their reputation, and enabling
-              them to focus on their key priorities.
+              This may be because they want or need to launch their medicine
+              much later in some countries, and not at all in others.
             </p>
             <p>
-              Clinigen utilise their footprint and global expertise built on 30
-              years of invaluable local insights to maintain and grow supply
-              through a range of different commercial and unlicensed channels.
+              It may be due to an unexpected disruption in the supply chain, or
+              a pharmaceutical company withdrawing from a market or markets.
             </p>
             <p>
-              That’s why Clinigen clients can be confident they get the result
-              that’s right for them and for their customers, and ultimately for
-              their patients.
+              Ensuring access at these times is often outside the company’s core
+              capabilities. They need a trusted partner to maintain highest
+              standards of compliance and ethics while continuing to drive value
+              – for themselves, for healthcare professionals and for patients.
+            </p>
+            <p>
+              A comprehensive understanding of the commercial vision is vital
+              for the partner to develop a solution specific to their needs, no
+              matter how complex.
+            </p>
+            <p>That’s where a Clinigen partnership starts.</p>
+            <p>
+              This essential first step allows clients to realise the full value
+              of Clinigen’s expertise and insights in unlicensed medicines
+              gained over 30 years on every continent.
+            </p>
+            <p>
+              Expertise that guides them in what’s feasible and what’s not.
+              Insights that inform recommendations to add maximum value. And the
+              reach, capacity and capability to deliver global access, supported
+              by first-class logistics, customer service and regulatory
+              know-how.
+            </p>
+            <p>
+              Clinigen’s approach ensures flexible solutions when and where
+              clients and your patients need them.
             </p>
           </div>
           <div class="relatedLinksProducts">
@@ -494,7 +511,7 @@
               <li>
                 <a href="partnering.html">Partnering</a>
               </li>
-              <li><a href="markets.html">Unlicensed Markets</a></li>
+              <li><a href="divestment.html">Divestment</a></li>
               <li><a href="#">Our Products</a></li>
             </ul>
           </div>
