--- a/public/products-services/products.html
+++ b/public/products-services/products.html
@@ -330,15 +330,17 @@
           <div class="menuCache_ProductsServices_Card">
             <ul>
               <li class="mainLi">
-                <a href="../products-services/products.html">Products</a>
+                <a href="products.html">Products</a>
               </li>
               <li class="secondLi">
-                <a href="../products-services/partnering.html">Partnering</a>
+                <a href="partnering.html">Partnering</a>
               </li>
               <li class="secondLi">
-                <a href="../products-services/divestment.html">Divestment</a>
+                <a href="divestment.html">Divestment</a>
               </li>
-              <li class="secondLi"><a href="http://">Unlicensed Markets</a></li>
+              <li class="secondLi">
+                <a href="markets.html">Unlicensed Markets</a>
+              </li>
               <li class="secondLi"><a href="http://">Our Products</a></li>
             </ul>
           </div>
@@ -479,12 +481,12 @@
             <h3>HOW WE HELP</h3>
             <ul>
               <li>
-                <a href="../products-services/partnering.html">Partnering</a>
+                <a href="partnering.html">Partnering</a>
               </li>
               <li>
-                <a href="../products-services/divestment.html">Divestment</a>
+                <a href="divestment.html">Divestment</a>
               </li>
-              <li><a href="">Inlicensed Markets</a></li>
+              <li><a href="markets.html">Inlicensed Markets</a></li>
               <li><a href="">Ou Products</a></li>
             </ul>
           </div>
